--- a/views/admin.layouts/navbar.ejs
+++ b/views/admin.layouts/navbar.ejs
@@ -8,7 +8,7 @@
       </h2>
       <div class="hello__user">
          Xin chào<br />
-         <%= user.fullname %>
+         <%= role.name %>
       </div>
    </div>
 </header>
