--- a/views/admin.layouts/sidebar.ejs
+++ b/views/admin.layouts/sidebar.ejs
@@ -13,7 +13,7 @@
                <span>Trang chủ</span>
             </a>
          </li>
-         <% if(user.role == 'admin') { %>
+         <% if(role.name == 'admin') { %>
          <li class="">
             <a href="/dashboard/users" class="sidebar-menu_user">
                <span class="las la-desktop"></span>
