--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,5 +1,5 @@
 <div class="cards">
-   <%if(user.role == 'admin') {%>
+   <%if(role.name == 'admin') {%>
    <a href="/dashboard/users" class="card-single">
       <div>
          <h1><%=numOfUser%></h1>
