--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -91,12 +91,12 @@
                         />
                      </div>
                      <div class="form-group">
-                        <h6 style="padding-top: 10px">Thu nhập hằng tháng</h6>
+                        <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
                         <input
                            class="form-control"
                            type="number"
-                           name="priceMonth"
-                           placeholder="Nhập giá thu nhập"
+                           name="rentalRate"
+                           placeholder="Nhập giá cho thuê"
                            id=""
                         />
                      </div>
