--- a/views/admin/update.ejs
+++ b/views/admin/update.ejs
@@ -116,13 +116,13 @@
                         />
                      </div>
                      <div class="form-group">
-                        <h6 style="padding-top: 10px">Thu nhập hằng tháng</h6>
+                        <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
                         <input
                            class="form-control"
                            type="number"
-                           name="priceMonth"
-                           placeholder="Nhập giá thu nhập"
-                           value="<%= apartment.priceMonth %>"
+                           name="rentalRate"
+                           placeholder="Nhập giá cho thuê"
+                           value="<%= apartment.rentalRate %>"
                         />
                      </div>
                      <div class="form-group">
