--- a/views/admin/message.ejs
+++ b/views/admin/message.ejs
@@ -17,8 +17,8 @@
                   <tr>
                      <th class="text-center align-middle">STT</th>
                      <th class="text-center align-middle">Email</th>
-                     <th class="text-center align-middle">Sdt</th>
-                     <th class="text-center align-middle">Name</th>
+                     <th class="text-center align-middle">Số điện thoại</th>
+                     <th class="text-center align-middle">Tên người dùng</th>
                      <th class="text-center align-middle">Nội dung tin nhắn</th>
                      <th class="text-center align-middle">Thời gian</th>
                      <th class="text-center align-middle">Action</th>
