--- a/views/layouts/message.ejs
+++ b/views/layouts/message.ejs
@@ -29,7 +29,7 @@
             <div class="field">
                <input
                   name="phonenumber"
-                  type="phone"
+                  type="number"
                   placeholder="Số điện thoại "
                   required
                   value="<%=textMessage.phonenumber%>"
@@ -67,7 +67,7 @@
                <input name="email" type="email" placeholder="Địa chỉ Email " required />
             </div>
             <div class="field">
-               <input name="phonenumber" type="phone" placeholder="Số điện thoại " required />
+               <input name="phonenumber" type="number" placeholder="Số điện thoại " required />
             </div>
             <div class="field textarea">
                <textarea name="content" cols="30" rows="10" placeholder="Nội dung liên hệ .." required></textarea>
