--- a/views/admin/contact.ejs
+++ b/views/admin/contact.ejs
@@ -13,7 +13,7 @@
                      <th class="text-center align-middle">STT</th>
                      <th class="text-center align-middle">Email</th>
                      <th class="text-center align-middle">Số điện thoại</th>
-                     <th class="text-center align-middle">Name</th>
+                     <th class="text-center align-middle">Tên người dùng</th>
                      <th class="text-center align-middle">tên căn hộ</th>
                      <th class="text-center align-middle">Thời gian</th>
                      <th class="text-center align-middle">Action</th>
