--- a/views/admin/update.ejs
+++ b/views/admin/update.ejs
@@ -1,6 +1,6 @@
 <div class="upload">
    <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-9">
          <form action="/dashboard/update/<%= apartment.id %>" method="POST" enctype="multipart/form-data">
             <div class="card mb-3">
                <div class="card-header">
@@ -16,57 +16,59 @@
                         <option value="Miền Trung">Miền Trung</option>
                         <option value="Miền Nam">Miền Nam</option>
                      </select>
-                     <div class="form-group mt-2" id="select-city">
-                        <h6 for="">Thành phố</h6>
-                        <input
-                           type="Thành phố"
-                           name="city"
-                           placeholder="Thành phố"
-                           id=""
-                           class="form-control"
-                           value="<%= apartment.city %>"
-                        />
+
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="form-group mt-2 mr-3" id="select-city">
+                              <h6 for="">Thành phố</h6>
+                              <input
+                                 type="Thành phố"
+                                 name="city"
+                                 placeholder="Thành phố"
+                                 value="<%= apartment.city %>"
+                                 class="form-control"
+                              />
+                           </div>
+                           <div class="form-group mt-2 mr-3 ml-3" id="select-district">
+                              <h6 for="">Quận / Huyện</h6>
+                              <input
+                                 class="form-control"
+                                 type=""
+                                 name="district"
+                                 placeholder="Quận/Huyện"
+                                 value="<%= apartment.district %>"
+                              />
+                           </div>
+                           <div class="form-group mt-2 ml-3" id="select-ward">
+                              <h6 for="">Phường / Xã</h6>
+                              <input
+                                 class="form-control"
+                                 type=""
+                                 name="ward"
+                                 placeholder="Phường/Xã"
+                                 value="<%= apartment.ward %>"
+                              />
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group mt-2" id="select-district">
-                        <h6 for="">Quận / Huyện</h6>
-                        <input
-                           class="form-control"
-                           type=""
-                           name="district"
-                           placeholder="Quận/Huyện"
-                           value="<%= apartment.district %>"
-                        />
+                     
+                  <div class="row">
+                     <div class="col-md-9 d-flex">
+                        <div class="form-group mt-2 mr-3" id="select-beach">
+                           <h6 for="">Bãi biển</h6>
+                           <input class="form-control" type="" name="beach" placeholder="Bãi biển" value="<%= apartment.beach %>" />
+                        </div>
+                        <div class="form-group mt-2 ml-3 mr-3">
+                           <h6 for="">Số nhà</h6>
+                           <input
+                              type="Địa Chỉ"
+                              name="address"
+                              placeholder="Số nhà, tên đường"
+                              value="<%= apartment.address %>"
+                              class="form-control"
+                           />
+                        </div>
                      </div>
-                     <div class="form-group mt-2" id="select-ward">
-                        <h6 for="">Phường / Xã</h6>
-                        <input
-                           class="form-control"
-                           type=""
-                           name="ward"
-                           placeholder="Phường/Xã"
-                           value="<%= apartment.ward %>"
-                        />
-                     </div>
-                     <div class="form-group mt-2" id="select-beach">
-                        <h6 for="">Bãi biển</h6>
-                        <input
-                           class="form-control"
-                           type=""
-                           name="beach"
-                           placeholder="Bãi biển"
-                           value="<%= apartment.beach %>"
-                        />
-                     </div>
-                  </div>
-                  <div class="form-group mt-2">
-                     <h6 for="">Số nhà</h6>
-                     <input
-                        type="Địa Chỉ"
-                        name="address"
-                        placeholder="Số nhà, tên đường"
-                        value="<%= apartment.address %>"
-                        class="form-control"
-                     />
                   </div>
                   <div style="margin-top: 20px">
                      <h4 class="">Thông tin mô tả</h4>
@@ -94,81 +96,148 @@
 <%= apartment.description %></textarea
                         >
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Giá căn hộ</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="price"
-                           placeholder="Nhập giá (đơn vị: VNĐ)"
-                           id="price"
-                           value="<%= apartment.price %>"
-                        />
+                     
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Giá căn hộ</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="price"
+                                    placeholder="Nhập giá (đơn vị: VNĐ)"
+                                    id="price"
+                                    value="<%= apartment.price %>"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Diện tích căn hộ</h6>
+                                 <input
+                                    class="form-control"
+                                    type="Nhập diện tích"
+                                    name="acreage"
+                                    placeholder="Nhập diện tích (m&sup2)"
+                                    value="<%= apartment.acreage %>"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="rentalRate"
+                                    placeholder="Nhập giá cho thuê"
+                                    value="<%= apartment.rentalRate %>"
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Diện tích căn hộ</h6>
-                        <input
-                           class="form-control"
-                           type="Nhập diện tích"
-                           name="acreage"
-                           placeholder="Nhập diện tích (m2)"
-                           value="<%= apartment.acreage %>"
-                        />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="rentalRate"
-                           placeholder="Nhập giá cho thuê"
-                           value="<%= apartment.rentalRate %>"
-                        />
-                     </div>
-                     <div class="form-group">
+                     <div class="form-group ml-3 mr-3">
                         <h6 style="padding-top: 10px">Tỷ lệ full phòng</h6>
                         <input
                            class="form-control"
                            type="number"
                            name="fullRoom"
                            placeholder="Nhập phần trăm full phòng"
-                           id=""
+                           value="<%= apartment.fullRoom %>"
                         />
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(Thường)</h6>
-                        <input class="form-control" type="number" name="percentDiscount" placeholder="Nhập phần trăm" />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(Thường)</h6>
-                        <input class="form-control" type="number" name="percentOther" placeholder="Nhập phần trăm" />
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(Thường)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentDiscount %>"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(Thường)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentOther %>"
+
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
 
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(70%)</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="percentDiscount70"
-                           placeholder="Nhập phần trăm"
-                        />
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(70%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount70"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentDiscount70 %>"
+
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(70%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther70"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentOther70 %>"
+
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(70%)</h6>
-                        <input class="form-control" type="number" name="percentOther70" placeholder="Nhập phần trăm" />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(90%)</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="percentDiscount90"
-                           placeholder="Nhập phần trăm"
-                        />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(90%)</h6>
-                        <input class="form-control" type="number" name="percentOther90" placeholder="Nhập phần trăm" />
+
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(90%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount90"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentDiscount90 %>"
+
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(90%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther90"
+                                    placeholder="Nhập phần trăm"
+                                    value="<%= apartment.percentOther90 %>"
+
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
                      <div class="form-group" id="show">
                         <h6 style="padding-top: 10px">Phần trăm đóng theo đợt</h6>
@@ -221,7 +290,6 @@
 <script>
    const $ = document.querySelector.bind(document);
    const $$ = document.querySelectorAll.bind(document);
-   $('.sidebar-menu_upload').classList.add('active');
 
    function dele(value) {
       const deleelemeent = document.getElementById('list_dot');
