--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -1,6 +1,6 @@
 <div class="upload">
    <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-9">
          <form action="/dashboard/upload/post" method="POST" enctype="multipart/form-data">
             <div class="card mb-3">
                <div class="card-header">
@@ -16,31 +16,39 @@
                         <option value="Miền Trung">Miền Trung</option>
                         <option value="Miền Nam">Miền Nam</option>
                      </select>
-                     <div class="form-group mt-2" id="select-city">
-                        <h6 for="">Thành phố</h6>
-                        <input type="Thành phố" name="city" placeholder="Thành phố" id="" class="form-control" />
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="form-group mt-2 mr-3" id="select-city">
+                              <h6 for="">Thành phố</h6>
+                              <input type="Thành phố" name="city" placeholder="Thành phố" id="" class="form-control" />
+                           </div>
+                           <div class="form-group mt-2 mr-3 ml-3" id="select-district">
+                              <h6 for="">Quận / Huyện</h6>
+                              <input class="form-control" type="" name="district" placeholder="Quận/Huyện" id="" />
+                           </div>
+                           <div class="form-group mt-2 ml-3" id="select-ward">
+                              <h6 for="">Phường / Xã</h6>
+                              <input class="form-control" type="" name="ward" placeholder="Phường/Xã" id="" />
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group mt-2" id="select-district">
-                        <h6 for="">Quận / Huyện</h6>
-                        <input class="form-control" type="" name="district" placeholder="Quận/Huyện" id="" />
-                     </div>
-                     <div class="form-group mt-2" id="select-ward">
-                        <h6 for="">Phường / Xã</h6>
-                        <input class="form-control" type="" name="ward" placeholder="Phường/Xã" id="" />
-                     </div>
-                     <div class="form-group mt-2" id="select-beach">
-                        <h6 for="">Bãi biển</h6>
-                        <input class="form-control" type="" name="beach" placeholder="Bãi biển" id="" />
-                     </div>
-                     <div class="form-group mt-2">
-                        <h6 for="">Số nhà</h6>
-                        <input
-                           type="Địa Chỉ"
-                           name="address"
-                           placeholder="Số nhà, tên đường"
-                           id=""
-                           class="form-control"
-                        />
+                     <div class="row">
+                        <div class="col-md-9 d-flex">
+                           <div class="form-group mt-2 mr-3" id="select-beach">
+                              <h6 for="">Bãi biển</h6>
+                              <input class="form-control" type="" name="beach" placeholder="Bãi biển" id="" />
+                           </div>
+                           <div class="form-group mt-2 ml-3 mr-3">
+                              <h6 for="">Số nhà</h6>
+                              <input
+                                 type="Địa Chỉ"
+                                 name="address"
+                                 placeholder="Số nhà, tên đường"
+                                 id=""
+                                 class="form-control"
+                              />
+                           </div>
+                        </div>
                      </div>
                   </div>
 
@@ -69,38 +77,48 @@
                            style="font-size: 14px; border: 1px solid black; padding: 10px"
                         ></textarea>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Giá căn hộ</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="price"
-                           placeholder="Nhập giá (đơn vị: VNĐ)"
-                           id="price"
-                           value=""
-                        />
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Giá căn hộ</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="price"
+                                    placeholder="Nhập giá (đơn vị: VNĐ)"
+                                    id="price"
+                                    value=""
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Diện tích căn hộ</h6>
+                                 <input
+                                    class="form-control"
+                                    type="Nhập diện tích"
+                                    name="acreage"
+                                    placeholder="Nhập diện tích (m&sup2)"
+                                    id=""
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="rentalRate"
+                                    placeholder="Nhập giá cho thuê"
+                                    id=""
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Diện tích căn hộ</h6>
-                        <input
-                           class="form-control"
-                           type="Nhập diện tích"
-                           name="acreage"
-                           placeholder="Nhập diện tích (m&sup2)"
-                           id=""
-                        />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Giá cho thuê phòng</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="rentalRate"
-                           placeholder="Nhập giá cho thuê"
-                           id=""
-                        />
-                     </div>
-                     <div class="form-group">
+                     <div class="form-group ml-3 mr-3">
                         <h6 style="padding-top: 10px">Tỷ lệ full phòng</h6>
                         <input
                            class="form-control"
@@ -110,44 +128,95 @@
                            id=""
                         />
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(Thường)</h6>
-                        <input class="form-control" type="number" name="percentDiscount" placeholder="Nhập phần trăm" />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(Thường)</h6>
-                        <input class="form-control" type="number" name="percentOther" placeholder="Nhập phần trăm" />
+
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(Thường)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(Thường)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
 
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(70%)</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="percentDiscount70"
-                           placeholder="Nhập phần trăm"
-                        />
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(70%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount70"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(70%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther70"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(70%)</h6>
-                        <input class="form-control" type="number" name="percentOther70" placeholder="Nhập phần trăm" />
+
+                     <div class="row">
+                        <div class="col-md-12 d-flex">
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(90%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentDiscount90"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="form-group">
+                                 <h6 style="padding-top: 10px">Các chiết khấu khác(90%)</h6>
+                                 <input
+                                    class="form-control"
+                                    type="number"
+                                    name="percentOther90"
+                                    placeholder="Nhập phần trăm"
+                                 />
+                              </div>
+                           </div>
+                        </div>
                      </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Chính sách chiết khấu thanh toán(90%)</h6>
-                        <input
-                           class="form-control"
-                           type="number"
-                           name="percentDiscount90"
-                           placeholder="Nhập phần trăm"
-                        />
-                     </div>
-                     <div class="form-group">
-                        <h6 style="padding-top: 10px">Các chiết khấu khác(90%)</h6>
-                        <input class="form-control" type="number" name="percentOther90" placeholder="Nhập phần trăm" />
-                     </div>
+                     <!-- <div class="row">
+                        <div class="col-md-12">
+                           
+                        </div>
+                     </div> -->
                      <div class="form-group" id="show">
                         <h6 style="padding-top: 10px">Phần trăm đóng theo đợt</h6>
-                        <select id="selectBox" onchange="changeFunc(value);">
+                        <select class="" id="selectBox" onchange="changeFunc(value);">
                            <option class="option" disabled hidden selected>0</option>
                            <option class="option" value="1">1</option>
                            <option class="option" value="2">2</option>
@@ -206,7 +275,7 @@
       for (let index = 0; index < Number(value); index++) {
          htmlObj.innerHTML =
             htmlObj.innerHTML +
-            `<div> Phần trăm của đợt ${index + 1} </div>` +
+            `<div > Phần trăm của đợt ${index + 1} </div>` +
             `<input class ='form-control' type='phần trăm' name='phase' placeholder='% ' id='list_dot'/> `;
       }
    }
