--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -648,3 +648,9 @@ input {
       margin-left: 91.66667%;
    }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
