--- a/views/admin/create.ejs
+++ b/views/admin/create.ejs
@@ -37,7 +37,7 @@
                      <div class="form-group">
                         <p class="text-left">Số điện thoại</p>
                         <input
-                           type="text"
+                           type="number"
                            id="phonenumber"
                            name="phonenumber"
                            placeholder="Số điện thoại"
