--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/styles/header.css" />
+
 <!-- <link rel="stylesheet" href="styles/base.css"> -->
 <div class="header__header-main">
    <div class="site-header">
@@ -62,5 +63,6 @@
 <!-- <script type="text/javascript">
    jQuery(document).ready(function ($) {
       $('.alert__success').delay(3000).fadeOut('slow');
-   });
-</script> -->
+      $('.alert__fail').delay(3000).fadeOut('slow');
+   }); -->
+</script>
