--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -38,6 +38,7 @@ a:hover {
 }
 .site-identity .logo-name {
    font-size: 40px;
+   font-family: 'cursive';
 }
 
 .site-navigation {
@@ -158,7 +159,6 @@ a:hover {
    color: white;
    z-index: 1000;
    box-shadow: 7px 6px 14px #888888;
-
 }
 .alert__success i {
    font-size: 38px;
