--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,3 +1,9 @@
+body {
+   line-height: 0.8 !important;
+}
+.site-header {
+   line-height: 1.3;
+}
 .profile__main {
    margin-top: 50px;
 }
@@ -244,8 +250,9 @@
    opacity: 0.8;
 }
 .profile__form-control {
-   font-size: 1.4rem;
-   left: 70px;
+   line-height: 1.5;
+   font-size: 1.6rem;
+   left: 90px;
    bottom: 50px;
    position: absolute;
 }
