--- a/views/layouts/register.ejs
+++ b/views/layouts/register.ejs
@@ -71,7 +71,7 @@
                   </div>
                   <div class="form-group">
                      <input
-                        type="text"
+                        type="number"
                         id="phonenumber"
                         name="phonenumber"
                         placeholder="Số điện thoại"
