--- a/public/styles/analysis.css
+++ b/public/styles/analysis.css
@@ -198,3 +198,19 @@ tbody tr td span {
 .area__table {
    margin-bottom: 100px;
 }
+#show-option {
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+}
+#show-option p {
+   font-size: 17px;
+   margin-bottom: 7px;
+}
+.inputInterest {
+   border: 1px solid #000;
+   height: 30px;
+   border-radius: 10px;
+   width: 75px;
+   padding-left: 7px;
+}
